# starburst-data-product-migration

./: .buildinfo  README.md  dataset_migrant.html  genindex.html  index.html  introduction.html  migrators.html  objects.inv  search.html  searchindex.js  setup.cfg
.doctrees/: dataset_migrant.doctree  environment.pickle  index.doctree  introduction.doctree  migrators.doctree
.github/workflows/: docs.yml
_sources/: index.rst.txt  introduction.rst.txt  migrators.rst.txt
datamesh_migration/: variables.py
datamesh_migration/files/: starburst_files.py
datamesh_migration/migrators/: datamesh_migrators.py  dataset_migrant.py
docs_source/source/: conf.py  dataset_migrant.rst  index.rst  introduction.rst  migrators.rst
