[metadata]
name = datamesh-migration-oci
version = 0.1.0
author = Gougou Nelson
author_email = nelson.gougou@orange.com
description = Package to migrate datamesh entities from one starburst instance to another
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyyaml
    starburst-python-wrapper @ git+https://gitlab_analytics.ocitnetad.ci/cspt/datamesh/starburst-python-wrapper.git
